[gd_scene load_steps=2 format=3 uid="uid://by4v1amyeerii"]

[ext_resource type="Script" path="res://ui/panels/settings.gd" id="1_rtx3w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtx3w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"flatPanel"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="settings" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="enabled" type="HBoxContainer" parent="ScrollContainer/settings"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/enabled"]
layout_mode = 2
size_flags_horizontal = 3

[node name="enabled" type="Label" parent="ScrollContainer/settings/enabled/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -13.0
offset_right = 30.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Fancy Lighting"

[node name="Control2" type="Control" parent="ScrollContainer/settings/enabled"]
layout_mode = 2
size_flags_horizontal = 3

[node name="enabled2" type="CheckButton" parent="ScrollContainer/settings/enabled/Control2"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/settings/enabled"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="use occlusion" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control2" type="Control" parent="ScrollContainer/settings/use occlusion"]
layout_mode = 2
size_flags_horizontal = 3

[node name="use occlusion" type="Label" parent="ScrollContainer/settings/use occlusion/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -13.0
offset_right = 50.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "use occlusion"

[node name="Control" type="Control" parent="ScrollContainer/settings/use occlusion"]
layout_mode = 2
size_flags_horizontal = 3

[node name="use occlusion2" type="CheckButton" parent="ScrollContainer/settings/use occlusion/Control"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.475
anchor_right = 0.525
anchor_bottom = 0.525
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/use occlusion"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="bounce feedback" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/bounce feedback"]
layout_mode = 2
size_flags_horizontal = 3

[node name="bounce feedback" type="Label" parent="ScrollContainer/settings/bounce feedback/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -13.0
offset_right = 64.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "bounce feedback"

[node name="Control2" type="Control" parent="ScrollContainer/settings/bounce feedback"]
layout_mode = 2
size_flags_horizontal = 3

[node name="bounce feedback2" type="HSlider" parent="ScrollContainer/settings/bounce feedback/Control2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/bounce feedback"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="cascades" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/cascades"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cascades" type="Label" parent="ScrollContainer/settings/cascades/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -13.0
offset_right = 34.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "cascades"

[node name="Control2" type="Control" parent="ScrollContainer/settings/cascades"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cascades2" type="HSlider" parent="ScrollContainer/settings/cascades/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/cascades"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="min cell size" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/min cell size"]
layout_mode = 2
size_flags_horizontal = 3

[node name="min cell size" type="Label" parent="ScrollContainer/settings/min cell size/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -13.0
offset_right = 45.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "min cell size"

[node name="Control2" type="Control" parent="ScrollContainer/settings/min cell size"]
layout_mode = 2
size_flags_horizontal = 3

[node name="min cell size2" type="HSlider" parent="ScrollContainer/settings/min cell size/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/min cell size"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="cascade 0 distance" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/cascade 0 distance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cascade 0 distance" type="Label" parent="ScrollContainer/settings/cascade 0 distance/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -13.0
offset_right = 70.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "cascade 0 distance"

[node name="Control2" type="Control" parent="ScrollContainer/settings/cascade 0 distance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cascade 0 distance2" type="HSlider" parent="ScrollContainer/settings/cascade 0 distance/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/cascade 0 distance"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="max distance" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/max distance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="max distance" type="Label" parent="ScrollContainer/settings/max distance/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -13.0
offset_right = 49.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "max distance"

[node name="Control2" type="Control" parent="ScrollContainer/settings/max distance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="max distance2" type="HSlider" parent="ScrollContainer/settings/max distance/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 500.0
step = 0.01
value = 0.1
scrollable = false
tick_count = 100
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/max distance"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="y scale" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/y scale"]
layout_mode = 2
size_flags_horizontal = 3

[node name="y scale" type="Label" parent="ScrollContainer/settings/y scale/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -13.0
offset_right = 25.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "y scale"

[node name="Control2" type="Control" parent="ScrollContainer/settings/y scale"]
layout_mode = 2
size_flags_horizontal = 3

[node name="y scale2" type="HSlider" parent="ScrollContainer/settings/y scale/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
rounded = true
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/y scale"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="energy" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/energy"]
layout_mode = 2
size_flags_horizontal = 3

[node name="energy" type="Label" parent="ScrollContainer/settings/energy/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -13.0
offset_right = 26.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "energy"

[node name="Control2" type="Control" parent="ScrollContainer/settings/energy"]
layout_mode = 2
size_flags_horizontal = 3

[node name="energy2" type="HSlider" parent="ScrollContainer/settings/energy/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/energy"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="normal bias" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/normal bias"]
layout_mode = 2
size_flags_horizontal = 3

[node name="normal bias" type="Label" parent="ScrollContainer/settings/normal bias/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -13.0
offset_right = 44.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "normal bias"

[node name="Control2" type="Control" parent="ScrollContainer/settings/normal bias"]
layout_mode = 2
size_flags_horizontal = 3

[node name="normal bias2" type="HSlider" parent="ScrollContainer/settings/normal bias/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/normal bias"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="probe bias" type="HBoxContainer" parent="ScrollContainer/settings"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="ScrollContainer/settings/probe bias"]
layout_mode = 2
size_flags_horizontal = 3

[node name="probe bias" type="Label" parent="ScrollContainer/settings/probe bias/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -13.0
offset_right = 44.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "normal bias"

[node name="Control2" type="Control" parent="ScrollContainer/settings/probe bias"]
layout_mode = 2
size_flags_horizontal = 3

[node name="probe bias2" type="HSlider" parent="ScrollContainer/settings/probe bias/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1
scrollable = false
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/settings/probe bias"]
layout_mode = 2
theme_type_variation = &"transparentHSeparator"

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
offset_left = -12.0
offset_top = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "Apply"
